--- a/src/style.css
+++ b/src/style.css
@@ -5,12 +5,12 @@
 
 body {
   display: flex;
-  font-family: 'MyFont';
+  font-family: 'MyFont', sans-serif;
   justify-content: center;
   align-items: center;
 }
 
-.task-form{
+.task-form {
   width: 30%;
 }
 
@@ -22,24 +22,24 @@ body {
   display: flex;
 }
 
-.clear{
+.clear {
   display: flex;
-  justify-content:center;
+  justify-content: center;
 }
 
-.reload img{
+.reload img {
   margin-left: auto;
 }
 
-.plus img{
+.plus img {
   margin-left: auto;
 }
 
-input{
+input {
   border: none;
 }
 
-.clear{
+.clear {
   padding: 2%;
   background-color: antiquewhite;
 }
